# osnap-api

./: Cargo.toml  README.md  Rocket.toml  database.md  dbCommands  setupDB.sh  todolist.md
.github/workflows/: rust.yml
src/: main.rs  parsers.rs  structures.rs  test.rs
