[package]
name = "osnap-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["secrets","tls","json"]}
rand_core = { version = "0.6.4", features = ["std"] }
argon2 = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]
