[package]
name = "osnap-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries-crates-io]
protocol = "sparse"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["secrets","tls","json"]}
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.2"
chrono = "0.4.23"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]
